Link to students

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 <h1>Fab Academy 2017</h1>
 
-Please insert your lab content here
+Please insert your lab content here<br><br>
+
+<a href="./students/index.html">Students</a><br>
 
 </body>
 </html>
